appId: com.cloudpresser.opencodeclient
---
- launchApp
- runFlow:
    file: add-server.yaml
- tapOn:
    id: "delete-server-btn-Test Server"
- tapOn:
    text: "Delete"
    index: 1
- waitForAnimationToEnd
- assertNotVisible: "Test Server"